# cryptoattacks

./: .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  a.out  choph.cpp  des_plain.txt  log.txt  test.cpp  test1.txt
.build/: CMakeCache.txt  Chopch.cpp  Makefile  cmake_install.cmake
A52/precomp/: precomp
A52/solver/: solver
doxygen/html/: annotated.html  choph_8cpp.html  choph_8cpp__incl.dot  choph_8cpp__incl.md5  classes.html  files.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  struct__ulong64-members.html  struct__ulong64.html
doxygen/html/search/: all_3.js  all_5.js  all_8.js  all_9.js  all_b.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  searchdata.js  typedefs_0.js
doxygen/latex/: annotated.tex  choph_8cpp.tex  choph_8cpp.tex.tmp  choph_8cpp__incl.dot  choph_8cpp__incl.md5  files.tex  refman.tex  struct__ulong64.tex
scripts/: compile.sh  run.sh
